2005-04-01  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_test_ogl.cpp (key_event): Add trapping ENTER and
	ESCAPE too. These supposedly get turned on by an
	fscommand('trapallkeys', true) somehow.
	* gameswf/gameswf_xml.cpp (xml_load): Don't try to open an XML
	disk file that doesn't exist, or the path is wrong.

2005-03-28  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_xml.cpp: Process XML messages one level
	deeper. Properly setup stack so firstChild.firstChild.nodeValue
	actually works.

2005-03-26  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_xmlsocket.cpp (anydata): Read as much data as
	there is on the socket. Break up the data into seperate messages,
	and store them in a queue.
	(xmlsocket_event_ondata): Process all the messages in the message
	queue before reading more messages. Call onData callback on all
	messages without returning. 
	
2005-03-25  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/Makefile.in: Add optional pthreads support. (currently
	unused)
	* gameswf/gameswf_xmlsocket.h: Add prototype for pthread entry
	point. (currently unused)
	* gameswf/gameswf_xmlsocket.cpp: Add pthread entry point that
	reads the socket. (currently unused)

	* gameswf/gameswf_impl.cpp: Check for socket data every time
	through the advance loop. Don't use an interupt handler, it's
	orders of magnitude too slow.
	* gameswf/gameswf_xmlsocket.cpp: Reduce by a huge amount the
	select timeout.


2005-03-24  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_xml.cpp (extractNode): New method to recursively
	parse XML data. Make _nodes a pointer.
	* gameswf/gameswf_xmlsocket.cpp: Add a NULL when sending XML
	messages, and don't strip off the NULL when reading XML messages.
	* gameswf/gameswf_textfield.{cpp,h}: Remove as unnecessary.
	* gameswf/Makefile.in: Don't build gameswf_textfield, we don't
	need it.
	* gameswf/gameswf_textformat.cpp: Add minimal support for all
	forms of setTextFormat.
